--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,20 +1,20 @@
 project:
   type: book
-  output-dir: book_output
+  output-dir: docs
 
 book:
   title: "Illumina metagenomic data analysis"
   author: "Luc van Zon"
   search: TRUE
-  date: "02/07/2025"
+  date: "03/13/2025"
   chapters:
     - index.qmd
-    - preparation.qmd
-    - quality_control.qmd
-    - assembly.qmd
-    - annotation.qmd
-    - parse_annotation.qmd
-    - illumina_hpc.qmd
+    - chapters/IMAM-02-preparation.qmd
+    - chapters/IMAM-03-quality_control.qmd
+    - chapters/IMAM-04-assembly.qmd
+    - chapters/IMAM-05-annotation.qmd
+    - chapters/IMAM-06-parse_annotation.qmd
+    - chapters/IMAM-07-illumina_hpc.qmd
 
 toc: true
 number-sections: true
@@ -22,12 +22,7 @@ number-depth: 3
 
 format:
   html:
-    embed-resources: false
     theme:
       light: flatly
       dark: darkly
-  pdf:
-    documentclass: scrreprt
-
-editor: visual
 
